apps/subwave/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  namespace: subwave
  labels:
    app.kubernetes.io/name: subwave
    app.kubernetes.io/component: caddy
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: subwave
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: subwave
  labels:
    app.kubernetes.io/name: subwave
    app.kubernetes.io/component: web
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 7700
      targetPort: web
      protocol: TCP
  selector:
    app.kubernetes.io/name: subwave
---
apiVersion: v1
kind: Service
metadata:
  name: controller
  namespace: subwave
  labels:
    app.kubernetes.io/name: subwave
    app.kubernetes.io/component: controller
spec:
  type: ClusterIP
  publishNotReadyAddresses: true
  ports:
    - name: controller
      port: 7701
      targetPort: controller
      protocol: TCP
  selector:
    app.kubernetes.io/name: subwave
---
apiVersion: v1
kind: Service
metadata:
  name: broadcast
  namespace: subwave
  labels:
    app.kubernetes.io/name: subwave
    app.kubernetes.io/component: broadcast
spec:
  type: ClusterIP
  ports:
    - name: broadcast
      port: 7702
      targetPort: broadcast
      protocol: TCP
  selector:
    app.kubernetes.io/name: subwave
---
apiVersion: v1
kind: Service
metadata:
  name: analyzer
  namespace: subwave
  labels:
    app.kubernetes.io/name: subwave
    app.kubernetes.io/component: analyzer
spec:
  type: ClusterIP
  ports:
    - name: analyzer
      port: 8080
      targetPort: analyzer
      protocol: TCP
  selector:
    app.kubernetes.io/name: subwave
