apps/subwave/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: subwave
  namespace: subwave
  labels:
    app.kubernetes.io/name: subwave
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: caddy
      port:
        name: http
  tls:
    - hosts: [wave]
